2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Make use of new logger features.

	* src/binarization/global_threshold.cc,
	* src/binarization/kim.cc,
	* src/binarization/niblack.cc,
	* src/binarization/otsu.cc,
	* src/binarization/sauvola.cc,
	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_debug.cc,
	* src/binarization/sauvola_ms_fg.cc,
	* src/binarization/sauvola_ms_split.cc,
	* src/binarization/wolf.cc: Make use of operator<<.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Cleanup Kim's binarization.

	* src/binarization/kim.cc: Move code...
	* scribo/binarization/kim.hh: ... here.

	* tests/binarization/Makefile.am: Add new target.

	* tests/binarization/kim.cc,
	* tests/binarization/kim.ref.pbm,
	* tests/binarization/kim_weven_hodd.ref.pbm,
	* tests/binarization/kim_wodd_heven.ref.pbm,
	* tests/binarization/kim_wodd_hodd.ref.pbm: New.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Make integral browsing canvas robust to large windows.

	* scribo/binarization/sauvola_ms.hh: remove tests on window size.

	* scribo/canvas/integral_browsing.hh: Check window size.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Several small fixes.

	* scribo/estim/font_color.hh: Fix namespace ambiguities.

	* src/binarization/Makefile.am: Add kim as target.

	* src/binarization/kim.cc: Cleanup code.

	* src/binarization/niblack.cc: Fix reverse video.

	* src/binarization/sauvola_ms.cc: Handle several k values.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation.

	* scribo/binarization/sauvola_ms.hh,
	* scribo/canvas/integral_browsing.hh: Here.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/binarization/kim.cc: Remove debug and useless steps.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/binarization/kim.cc: New binarization algorithm.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce a verbose mode.

	* scribo/binarization/internal/sauvola_ms_functor.hh,